<resources>
    <string name="app_name">hm2AndroidCalculator</string>
    <string name="title">Calculator</string>
    <string name="button_seven">7</string>
    <string name="button_eight">8</string>
    <string name="botton_nine">9</string>
    <string name="button_multi">*</string>
    <string name="button_four">4</string>
    <string name="button_five">5</string>
    <string name="button_six">6</string>
    <string name="button_div">/</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_three">3</string>
    <string name="button_minus">-</string>
    <string name="button_dot">.</string>
    <string name="button_zero">0</string>
    <string name="button_equals">=</string>
    <string name="button_plus">+</string>
    <string name="button_delete">Ac</string>
    <string name="button_parentheses_left">(</string>
    <string name="button_parentheses_right">)</string>
    <string name="button_back">Del</string>
    <string name="history_operations">History operations</string>


</resources>