<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey">

    <Button
        android:id="@+id/button_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style_black"
        android:textColor="@color/white"
        android:padding="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_view_title"
        android:text="@string/history_operations"/>

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_history" />

    <TextView
        android:id="@+id/text_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingRight="@dimen/text_view_right_padding"
        android:background="@drawable/style_text_view"
        android:maxLines="1"
        android:gravity="right|center_vertical"
        android:textColor="@color/black"
        app:autoSizeMaxTextSize="@dimen/text_view_max_text_size"
        app:autoSizeMinTextSize="@dimen/text_view_min_text_size"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        android:textSize="@dimen/text_view_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_title"
        tools:text="54+" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="@dimen/button_width_size"
        android:layout_height="@dimen/button_height_size"
        android:background="@drawable/button_style_black"
        android:text="@string/button_delete"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_seven"
        app:layout_constraintEnd_toStartOf="@id/button_parentheses_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view" />

    <Button
        android:id="@+id/button_parentheses_left"
        android:layout_width="@dimen/button_width_size"
        android:layout_height="@dimen/button_height_size"
        android:background="@drawable/button_style_black"
        android:text="@string/button_parentheses_left"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_eight"
        app:layout_constraintEnd_toStartOf="@id/button_parentheses_right"
        app:layout_constraintStart_toEndOf="@id/button_delete"
        app:layout_constraintTop_toBottomOf="@id/text_view" />

    <Button
        android:id="@+id/button_parentheses_right"
        android:layout_width="@dimen/button_width_size"
        android:layout_height="@dimen/button_height_size"
        android:background="@drawable/button_style_black"
        android:text="@string/button_parentheses_right"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_nine"
        app:layout_constraintStart_toEndOf="@id/button_parentheses_left"
        app:layout_constraintEnd_toStartOf="@id/button_back"
        app:layout_constraintTop_toBottomOf="@id/text_view" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="@dimen/button_width_size"
        android:layout_height="@dimen/button_height_size"
        android:background="@drawable/button_style_black"
        android:text="@string/button_back"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_multi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_parentheses_right"
        app:layout_constraintTop_toBottomOf="@id/text_view" />

    <Button
        android:id="@+id/button_seven"
        android:layout_width="@dimen/button_width_size"
        android:layout_height="@dimen/button_height_size"
        android:background="@drawable/button_style_grey"
        android:text="@string/button_seven"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toStartOf="@id/button_eight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_delete" />

    <Button
        android:id="@+id/button_eight"
        android:layout_width="@dimen/button_width_size"
        android:layout_height="@dimen/button_height_size"
        android:background="@drawable/button_style_grey"
        android:text="@string/button_eight"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toStartOf="@id/button_nine"
        app:layout_constraintStart_toEndOf="@id/button_seven"
        app:layout_constraintTop_toBottomOf="@id/button_delete" />

    <Button
        android:id="@+id/button_nine"
        android:layout_width="@dimen/button_width_size"
        android:layout_height="@dimen/button_height_size"
        android:background="@drawable/button_style_grey"
        android:text="@string/botton_nine"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toStartOf="@id/button_multi"
        app:layout_constraintStart_toEndOf="@id/button_eight"
        app:layout_constraintTop_toBottomOf="@id/button_delete" />

    <Button
        android:id="@+id/button_multi"
        android:layout_width="@dimen/button_width_size"
        android:layout_height="@dimen/button_height_size"
        android:background="@drawable/button_style_black"
        android:text="@string/button_multi"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_nine"
        app:layout_constraintTop_toBottomOf="@id/button_delete" />

    <Button
        android:id="@+id/button_four"
        android:layout_width="@dimen/button_width_size"
        android:layout_height="@dimen/button_height_size"
        android:background="@drawable/button_style_grey"
        android:text="@string/button_four"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toStartOf="@id/button_five"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_seven" />

    <Button
        android:id="@+id/button_five"
        android:layout_width="@dimen/button_width_size"
        android:layout_height="@dimen/button_height_size"
        android:background="@drawable/button_style_grey"
        android:text="@string/button_five"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toStartOf="@id/button_six"
        app:layout_constraintStart_toEndOf="@id/button_four"
        app:layout_constraintTop_toBottomOf="@id/button_eight" />

    <Button
        android:id="@+id/button_six"
        android:layout_width="@dimen/button_width_size"
        android:layout_height="@dimen/button_height_size"
        android:background="@drawable/button_style_grey"
        android:text="@string/button_six"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toStartOf="@id/button_div"
        app:layout_constraintStart_toEndOf="@id/button_five"
        app:layout_constraintTop_toBottomOf="@id/button_nine" />

    <Button
        android:id="@+id/button_div"
        android:layout_width="@dimen/button_width_size"
        android:layout_height="@dimen/button_height_size"
        android:background="@drawable/button_style_black"
        android:text="@string/button_div"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_six"
        app:layout_constraintTop_toBottomOf="@id/button_multi" />

    <Button
        android:id="@+id/button_one"
        android:layout_width="@dimen/button_width_size"
        android:layout_height="@dimen/button_height_size"
        android:background="@drawable/button_style_grey"
        android:text="@string/button_one"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toStartOf="@id/button_two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_four" />

    <Button
        android:id="@+id/button_two"
        android:layout_width="@dimen/button_width_size"
        android:layout_height="@dimen/button_height_size"
        android:background="@drawable/button_style_grey"
        android:text="@string/button_two"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toStartOf="@id/button_three"
        app:layout_constraintStart_toEndOf="@id/button_one"
        app:layout_constraintTop_toBottomOf="@id/button_five" />

    <Button
        android:id="@+id/button_three"
        android:layout_width="@dimen/button_width_size"
        android:layout_height="@dimen/button_height_size"
        android:background="@drawable/button_style_grey"
        android:text="@string/button_three"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toStartOf="@id/button_minus"
        app:layout_constraintStart_toEndOf="@id/button_two"
        app:layout_constraintTop_toBottomOf="@id/button_six" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="@dimen/button_width_size"
        android:layout_height="@dimen/button_height_size"
        android:background="@drawable/button_style_black"
        android:text="@string/button_minus"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_three"
        app:layout_constraintTop_toBottomOf="@id/button_div" />

    <Button
        android:id="@+id/button_dot"
        android:layout_width="@dimen/button_width_size"
        android:layout_height="@dimen/button_height_size"
        android:background="@drawable/button_style_grey"
        android:text="@string/button_dot"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toStartOf="@id/button_zero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_one"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/button_zero"
        android:layout_width="@dimen/button_width_size"
        android:layout_height="@dimen/button_height_size"
        android:background="@drawable/button_style_grey"
        android:text="@string/button_zero"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toStartOf="@id/button_equals"
        app:layout_constraintStart_toEndOf="@id/button_dot"
        app:layout_constraintTop_toBottomOf="@id/button_two"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/button_equals"
        android:layout_width="@dimen/button_width_size"
        android:layout_height="@dimen/button_height_size"
        android:background="@drawable/button_style_black"
        android:text="@string/button_equals"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toStartOf="@id/button_plus"
        app:layout_constraintStart_toEndOf="@id/button_zero"
        app:layout_constraintTop_toBottomOf="@id/button_three"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/button_plus"
        android:layout_width="@dimen/button_width_size"
        android:layout_height="@dimen/button_height_size"
        android:background="@drawable/button_style_black"
        android:text="@string/button_plus"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_equals"
        app:layout_constraintTop_toBottomOf="@id/button_minus"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>